--- a/index.html
+++ b/index.html
@@ -149,49 +149,251 @@
           </div>
         </div>
         <div class="about__slider">
-          <div class="swiper gallerySlider">
+          <div class="swiper aboutSlider">
             <div class="swiper-wrapper">
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img1.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img2.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img3.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img4.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img1.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img2.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img3.jpg"
-                alt="about image"
-              />
-              <img
-                class="swiper-slide"
-                src="./assets/image/about-img4.jpg"
-                alt="about image"
-              />
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img1.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img2.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img3.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img4.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img1.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img2.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img3.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img4.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img1.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img2.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img3.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide about-slide">
+                <img src="./assets/image/slide-img4.jpg" alt="about image" />
+              </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="services mb-m">
+        <div class="container">
+          <div class="services__container">
+            <div class="services__title title">
+              <div>our services</div>
+              <h2>our services that <span>we provide</span></h2>
+            </div>
+            <div class="services__wrap">
+              <div class="services__item">
+                <div class="services__item_content">
+                  <div class="service_count">1 service</div>
+                  <h3>Jiu Jitsu Competition Package for Children's Parties</h3>
+                  <p>
+                    Ready to add excitement and healthy competition to your
+                    child's party? CompeteX Sport Events specializes in
+                    thrilling Jiu Jitsu competitions tailored for kids' parties!
+                  </p>
+                  <a href="./services.html" class="btn">read more</a>
+                </div>
+                <div class="services__item_img">
+                  <img
+                    src="./assets/image/services-img1.jpg"
+                    alt="Jiu Jitsu Competition Package for Children's Parties"
+                  />
+                </div>
+              </div>
+              <div class="services__item">
+                <div class="services__item_content">
+                  <div class="service_count">2 service</div>
+                  <h3>Jiu Jitsu Corporate Events</h3>
+                  <p>
+                    CompeteX Sport Events offers corporate clients unique Jiu
+                    Jitsu events that combine competition and team-building.
+                    This boosts morale, strengthens team bonds, and creates
+                    unforgettable experiences.
+                  </p>
+                  <a href="./services.html" class="btn">read more</a>
+                </div>
+                <div class="services__item_img">
+                  <img
+                    src="./assets/image/services-img2.jpg"
+                    alt="Jiu Jitsu Corporate Events"
+                  />
+                </div>
+              </div>
+              <div class="services__item">
+                <div class="services__item_content">
+                  <div class="service_count">3 service</div>
+                  <h3>Jiu Jitsu Competition Package</h3>
+                  <p>
+                    At CompeteX Sport Events, we bring the thrill of Jiu Jitsu
+                    to corporate clients. Our packages combine expert event
+                    management with team-building excitement, ensuring a
+                    successful and memorable experience for all.
+                  </p>
+                  <a href="./services.html" class="btn">read more</a>
+                </div>
+                <div class="services__item_img">
+                  <img
+                    src="./assets/image/services-img1.jpg"
+                    alt="Jiu Jitsu Competition Package"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mission mb-m">
+        <div class="container">
+          <div class="mission__container">
+            <div class="mission__title title">
+              <div>our mission</div>
+              <h2>our main <span>mission</span></h2>
+            </div>
+            <div class="mission__items">
+              <div class="mission__item double__img-item">
+                <div class="mission__item_images double__img-item-images">
+                  <img
+                    src="./assets/image/mission-img1.jpg"
+                    alt="Empowering Through Sport"
+                  />
+                  <img
+                    src="./assets/image/mission-img1.jpg"
+                    alt="Empowering Through Sport"
+                  />
+                </div>
+                <div class="mission__item_content double__img_content">
+                  <h3>Empowering Through Sport</h3>
+                  <p>
+                    Empowering individuals through inclusive sports experiences,
+                    fostering growth and community.
+                  </p>
+                </div>
+              </div>
+              <div class="mission__item double__img-item">
+                <div class="mission__item_images double__img-item-images">
+                  <img
+                    src="./assets/image/mission-img2.jpg"
+                    alt="Empowering Through Sport"
+                  />
+                  <img
+                    src="./assets/image/mission-img2.jpg"
+                    alt="Empowering Through Sport"
+                  />
+                </div>
+                <div class="mission__item_content double__img_content">
+                  <h3>Inspiring Play, Enriching Lives</h3>
+                  <p>
+                    Encouraging active lifestyles and personal growth through
+                    dynamic sports engagement.
+                  </p>
+                </div>
+              </div>
+              <div class="mission__item double__img-item">
+                <div class="mission__item_images double__img-item-images">
+                  <img
+                    src="./assets/image/mission-img3.jpg"
+                    alt="Empowering Through Sport"
+                  />
+                  <img
+                    src="./assets/image/mission-img3.jpg"
+                    alt="Empowering Through Sport"
+                  />
+                </div>
+                <div class="mission__item_content double__img_content">
+                  <h3>Experiences, Building Bonds</h3>
+                  <p>
+                    Creating unforgettable sports events that strengthen
+                    connections and inspire achievement.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery mb-m">
+        <div class="container">
+          <div class="gallery__container">
+            <div class="gallery__title title">
+              <div>GALLERY</div>
+              <h2>Photos from our <span>sporting events</span></h2>
+            </div>
+            <div class="gallery__images">
+              <img src="./assets/image/mission-img2.jpg" alt="gallery image" />
+              <img src="./assets/image/mission-img1.jpg" alt="gallery image" />
+
+              <img src="./assets/image/gallery-img1.jpg" alt="gallery image" />
+              <img src="./assets/image/mission-img1.jpg" alt="gallery image" />
+              <img src="./assets/image/mission-img2.jpg" alt="gallery image" />
+              <img src="./assets/image/gallery-img1.jpg" alt="gallery image" />
+            </div>
+            <a href="./gallery.html" class="btn">more photo</a>
+          </div>
+        </div>
+      </section>
+      <section class="news mb-m">
+        <div class="container">
+          <div class="news__container">
+            <div class="news__title title">
+              <div>NEWS</div>
+              <h2>latest news from <span>sporting events</span></h2>
+            </div>
+            <div class="news__wrap">
+              <div class="news__item">
+                <a href="./post.html" class="news__link">
+                  <img src="./assets/image/mission-img1.jpg" alt="news" />
+                </a>
+                <div class="news__item_bottom">
+                  <span class="news__date">23 apr, 2024</span>
+                  <p>
+                    The most relevant and latest news from the world of sports.
+                  </p>
+                  <a href="./post.html" class="news__more">more info</a>
+                </div>
+              </div>
+              <div class="news__item">
+                <a href="./post.html" class="news__link">
+                  <img src="./assets/image/mission-img3.jpg" alt="news" />
+                </a>
+                <div class="news__item_bottom">
+                  <span class="news__date">23 apr, 2024</span>
+                  <p>
+                    The most relevant and latest news from the world of sports.
+                  </p>
+                  <a href="./post.html" class="news__more">more info</a>
+                </div>
+              </div>
+              <div class="news__item">
+                <a href="./post.html" class="news__link">
+                  <img src="./assets/image/mission-img1.jpg" alt="news" />
+                </a>
+                <div class="news__item_bottom">
+                  <span class="news__date">23 apr, 2024</span>
+                  <p>
+                    The most relevant and latest news from the world of sports.
+                  </p>
+                  <a href="./post.html" class="news__more">more info</a>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="btn"> More news</a>
           </div>
         </div>
       </section>
