add faq section

--- a/index.html
+++ b/index.html
@@ -397,6 +397,82 @@
           </div>
         </div>
       </section>
+      <section class="faq">
+        <div class="container">
+          <div class="faq__container">
+            <div class="faq__title title"></div>
+            <div class="faq__accord accord">
+              <div class="faq__accord-item accord-item">
+                <div class="faq__accord-item-top accord-item-top">
+                  <p>1. How can I purchase tickets to a sporting event?</p>
+                  <div class="close">
+					<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
+
+                  </div>
+                </div>
+                <div class="faq__accord-item-bottom accord-item-bottom">
+                  <p>
+                    We cover a wide range of sporting events including soccer,
+                    basketball, tennis, hockey, athletics and many more. Our
+                    events calendar is regularly updated to keep you up to date
+                    with all upcoming matches and tournaments
+                  </p>
+                </div>
+              </div>
+              <div class="faq__accord-item accord-item">
+                <div class="faq__accord-item-top accord-item-top">
+                  <p>2. What types of sporting events do you cover?</p>
+                  <div class="close">
+					<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
+
+                  </div>
+                </div>
+                <div class="faq__accord-item-bottom accord-item-bottom">
+                  <p>
+                    We cover a wide range of sporting events including soccer,
+                    basketball, tennis, hockey, athletics and many more. Our
+                    events calendar is regularly updated to keep you up to date
+                    with all upcoming matches and tournaments
+                  </p>
+                </div>
+              </div>
+              <div class="faq__accord-item accord-item">
+                <div class="faq__accord-item-top accord-item-top">
+                  <p> 3. Can I return my ticket if I am unable to attend the event? </p>
+                  <div class="close">
+                    <svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
+                  </div>
+                </div>
+                <div class="faq__accord-item-bottom accord-item-bottom">
+                  <p>
+                    We cover a wide range of sporting events including soccer,
+                    basketball, tennis, hockey, athletics and many more. Our
+                    events calendar is regularly updated to keep you up to date
+                    with all upcoming matches and tournaments
+                  </p>
+                </div>
+              </div>
+              <div class="faq__accord-item accord-item">
+                <div class="faq__accord-item-top accord-item-top">
+                  <p> 4. How can I find out about upcoming sporting events and promotions?</p>
+                  <div class="close">
+					<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
+
+                  </div>
+                </div>
+                <div class="faq__accord-item-bottom accord-item-bottom">
+                  <p>
+                    We cover a wide range of sporting events including soccer,
+                    basketball, tennis, hockey, athletics and many more. Our
+                    events calendar is regularly updated to keep you up to date
+                    with all upcoming matches and tournaments
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
