--- a/index.html
+++ b/index.html
@@ -397,10 +397,13 @@
           </div>
         </div>
       </section>
-      <section class="faq">
+      <section class="faq mb-m">
         <div class="container">
           <div class="faq__container">
-            <div class="faq__title title"></div>
+            <div class="faq__title title">
+				<div>faq</div>
+				<h2>frequently asked <span>questions</span></h2>
+			</div>
             <div class="faq__accord accord">
               <div class="faq__accord-item accord-item">
                 <div class="faq__accord-item-top accord-item-top">
