--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </header>
     <main>
-      <div class="hero_v1 mb-m">
+      <section class="hero_v1 hero mb-m">
         <div class="hero__container">
           <div class="hero__top">
             <div class="container">
@@ -72,7 +72,7 @@
             />
           </div>
         </div>
-      </div>
+      </section>
 
       <section class="advantages mb-m">
         <div class="container">
@@ -336,13 +336,37 @@
               <h2>Photos from our <span>sporting events</span></h2>
             </div>
             <div class="gallery__images">
-              <img src="./assets/image/mission-img2.jpg" alt="gallery image" />
-              <img src="./assets/image/mission-img1.jpg" alt="gallery image" />
+              <img
+                class="gallery-image"
+                src="./assets/image/mission-img2.jpg"
+                alt="gallery image"
+              />
+              <img
+                class="gallery-image"
+                src="./assets/image/mission-img1.jpg"
+                alt="gallery image"
+              />
 
-              <img src="./assets/image/gallery-img1.jpg" alt="gallery image" />
-              <img src="./assets/image/mission-img1.jpg" alt="gallery image" />
-              <img src="./assets/image/mission-img2.jpg" alt="gallery image" />
-              <img src="./assets/image/gallery-img1.jpg" alt="gallery image" />
+              <img
+                class="gallery-image"
+                src="./assets/image/gallery-img1.jpg"
+                alt="gallery image"
+              />
+              <img
+                class="gallery-image"
+                src="./assets/image/mission-img1.jpg"
+                alt="gallery image"
+              />
+              <img
+                class="gallery-image"
+                src="./assets/image/mission-img2.jpg"
+                alt="gallery image"
+              />
+              <img
+                class="gallery-image"
+                src="./assets/image/gallery-img1.jpg"
+                alt="gallery image"
+              />
             </div>
             <a href="./gallery.html" class="btn">more photo</a>
           </div>
@@ -401,16 +425,35 @@
         <div class="container">
           <div class="faq__container">
             <div class="faq__title title">
-				<div>faq</div>
-				<h2>frequently asked <span>questions</span></h2>
-			</div>
+              <div>faq</div>
+              <h2>frequently asked <span>questions</span></h2>
+            </div>
             <div class="faq__accord accord">
               <div class="faq__accord-item accord-item">
                 <div class="faq__accord-item-top accord-item-top">
                   <p>1. How can I purchase tickets to a sporting event?</p>
                   <div class="close">
-					<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
-
+                    <svg
+                      viewBox="0 0 32 32"
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      fill="#000000"
+                    >
+                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                      <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></g>
+                      <g id="SVGRepo_iconCarrier">
+                        <g id="icomoon-ignore"></g>
+                        <path
+                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
+                          fill="#ffffff"
+                        ></path>
+                      </g>
+                    </svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
@@ -426,8 +469,27 @@
                 <div class="faq__accord-item-top accord-item-top">
                   <p>2. What types of sporting events do you cover?</p>
                   <div class="close">
-					<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
-
+                    <svg
+                      viewBox="0 0 32 32"
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      fill="#000000"
+                    >
+                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                      <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></g>
+                      <g id="SVGRepo_iconCarrier">
+                        <g id="icomoon-ignore"></g>
+                        <path
+                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
+                          fill="#ffffff"
+                        ></path>
+                      </g>
+                    </svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
@@ -441,9 +503,32 @@
               </div>
               <div class="faq__accord-item accord-item">
                 <div class="faq__accord-item-top accord-item-top">
-                  <p> 3. Can I return my ticket if I am unable to attend the event? </p>
+                  <p>
+                    3. Can I return my ticket if I am unable to attend the
+                    event?
+                  </p>
                   <div class="close">
-                    <svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
+                    <svg
+                      viewBox="0 0 32 32"
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      fill="#000000"
+                    >
+                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                      <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></g>
+                      <g id="SVGRepo_iconCarrier">
+                        <g id="icomoon-ignore"></g>
+                        <path
+                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
+                          fill="#ffffff"
+                        ></path>
+                      </g>
+                    </svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
@@ -457,10 +542,32 @@
               </div>
               <div class="faq__accord-item accord-item">
                 <div class="faq__accord-item-top accord-item-top">
-                  <p> 4. How can I find out about upcoming sporting events and promotions?</p>
+                  <p>
+                    4. How can I find out about upcoming sporting events and
+                    promotions?
+                  </p>
                   <div class="close">
-					<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="icomoon-ignore"> </g> <path d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z" fill="#ffffff"> </path> </g></svg>
-
+                    <svg
+                      viewBox="0 0 32 32"
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      fill="#000000"
+                    >
+                      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                      <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></g>
+                      <g id="SVGRepo_iconCarrier">
+                        <g id="icomoon-ignore"></g>
+                        <path
+                          d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
+                          fill="#ffffff"
+                        ></path>
+                      </g>
+                    </svg>
                   </div>
                 </div>
                 <div class="faq__accord-item-bottom accord-item-bottom">
